traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value Direction
    if (estFaceMur&&getDirection()==Direction.EST) {
                                    ^TraversalZigZag:26: error: not found: value Direction
      if (getDirection()==Direction.EST) {
                          ^